se agrega comentarios en HTML

--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,11 @@
   </head>
   <body>
     <div class="wrapper">
+              <!-- Sección de navegación principal con enlaces a diferentes partes del sitio 
+              COSAS A MEJORAR:
+              - Al darle click a los items de la barra de navegacion que nos lleve a esa parte de la pagina 
+              -->
+
       <header>
         <nav class="navbar">
           <div class="brand">
@@ -22,15 +27,27 @@
           </ul>
         </nav>
       </header>
+            <!-- Sección principal con información personal y botón para descargar CV 
+            COSAS A MEJORAR: PERSONALIZAR INFORMACION para que sea mas facil de leer y tenga algo de valor 
+            -->
+
       <main class="main">
         <div class="info-content">
           <h1>Soy <span>Jose</span> Lago</h1>
            <p>Soy un desarrollador web especializado en diseño UX/UI, apasionado por crear experiencias digitales que combinan funcionalidad y estética. Mi enfoque se centra en el desarrollo de soluciones web intuitivas, eficientes y adaptadas a las necesidades de los usuarios. Me esfuerzo por mantenerme al día con las últimas tendencias tecnológicas para ofrecer productos innovadores y de alto impacto. Con experiencia en herramientas como Figma, HTML, CSS y JavaScript, busco crear interfaces que sean tanto visualmente atractivas como fáciles de navegar.</p>
            <a download href="Archivos/Curriculum Vitae.pdf"><button class="download-cv">Descargar CV</button></a>
         </div>
+                <!-- Imagen del perfil 
+                COSAS A MEJORAR: poner una imagen profesional mia 
+                -->
+
         <img src="https://i.pinimg.com/736x/48/5d/34/485d3490861e058d4af3c69c7f41eb2d.jpg" alt="Foto-perfil">
       </main>
     </div>
+        <!-- Sección de "Acerca de mí" 
+        COSAS A MEJORAR:  que el boton 'ver mas' sea funcional y que pueda expandirse dando mas informacion sobre mi persona o incluso tecnologias las cuales uso
+        -->
+
       <div class="about">
         <img src="https://i.pinimg.com/736x/48/5d/34/485d3490861e058d4af3c69c7f41eb2d.jpg" alt="foto-perfil-complementaria">
         <div class="about-info">
@@ -40,6 +57,10 @@
           <button class="download-cv">Ver mas</button>
         </div>
       </div>
+          <!-- Sección del portafolio con tarjetas de proyectos. Se podrían añadir imágenes para mayor claridad visual
+           COSAS A MEJORAR: agregar proyectos, links y funcionalidad para que puedan ser visualizados
+          -->
+
       <div class="portfolio">
         <div class="portfolio-heading">
           <h2>Mi Portafolio</h2>
@@ -47,7 +68,7 @@
         </div>
         <div class="container">
           <div class="card">
-            <div class="card__img">
+            <div class="card__img"> <!-- deberia ir una imagen de proyecto-->
             </div>
             <div class="card__title">
               <h2>Nombre del proyecto</h2>
@@ -115,9 +136,14 @@
               </button>
             </div>
           </div>
+                  <!-- Termina la repeticion de tarjetas -->
+
         </div>
       </div>
-    
+        <!-- Sección de contacto con un formulario simple 
+        COSAS A MEJORAR: poner una imagen con poca opacidad de fondo para mejorar la estetica  
+        -->
+
       <div class="contact-section">
         <div class="contact-heading">
           <h2>Contactame!</h2>
@@ -127,6 +153,8 @@
           <img src="https://i.pinimg.com/736x/48/5d/34/485d3490861e058d4af3c69c7f41eb2d.jpg" alt="foto-perfil-complementaria">
           <div class="contact-form">
             <h4>Enviar un mensaje...</h4>
+                      <!-- Formulario para recibir mensajes del usuario -->
+
             <form class="form-group">
               <input type="text" placeholder="Nombre" class="input">
               <input type="email" placeholder="Email" class="input">
@@ -136,7 +164,10 @@
           </div>
         </div>
       </div>
-    
+        <!-- Sección del pie de página con enlaces a redes sociales
+        COSAS A MEJORAR: realizar links funcionales 
+        -->
+
       <footer class="footer"> 
         <div class="footer-content">
           <h2>Jose Lago</h2>
